syntax = "proto3";

package app.domain;

import "google/protobuf/descriptor.proto";
import "app/domain/options.proto";

option php_namespace = "App\\Domain\\Session";

// Определение сессии
message Session {
  option (app.domain.is_entity) = true;
  option (app.domain.table_name) = "sessions";
  option (app.domain.primary_key) = "id";

  string id = 1;
  int64 user_id = 2;
  string payload = 3 [(app.domain.is_json) = true];
  int64 expires_at = 4;
  int64 created_at = 5;
  int64 updated_at = 6;
}
